[package]
name = "rust-power-menu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version= "4.3.0", features = ["derive"]}
rofi = "0.3.0"
strum = { version= "0.24.1", features = ["derive"] }
system_shutdown = "4.0.1"
